--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <title>Tic Tac Toe</title>
 </head>
 
-<body>
+<body onload="init()">
 
+    <h1>Tic Tac Toe</h1>
+    <div id="content"></div>
+    <div class="center">
+        <button onclick="restartGame()">Spiel neu starten</button>
+    </div>
 
 
 
